# TerrainFreeSpaceNet

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
checkpoints/: test_model.pt
configs/: default.yaml  infer.yaml  train.yaml
examples/: sample_output.json
scripts/: evaluate.sh  infer.sh  train.sh  training_terrainFreeSpaceNet.py
terrainfreespacenet/: __init__.py  dataset.py  evaluate.py  infer.py  model.py  preprocess.py  train.py  utils.py
tests/: test_dataset.py  test_infer.py  test_model.py  test_preprocess.py
